# qrender

./: .gitignore  Cargo.toml  README  README.md  docker-compose.yml  groups.toml
.devcontainer/: devcontainer.json
.playwright-mcp/: page-2026-07-03T11-17-55-855Z.yml
docs/: ARCHITECTURE.md
qjson/: Cargo.toml
qjson/src/: cache.rs  error.rs  lib.rs  model.rs  sparql.rs  transform.rs
qjson/tests/fixtures/: Q173399.sparql.json  Q3870.sparql.json  Q42.sparql.json  Q668.sparql.json  Q90.sparql.json
qrender/: Cargo.toml  archetypes.toml  groups.toml
qrender/assets/: codex-tokens-light.css  factoid.css  factoid.js  wiki-map.js
qrender/assets/icons/: LICENSE.md
qrender/src/: archetype.rs  config.rs  data_loading.rs  error.rs  factoid.rs  grouping.rs  icons.rs  lib.rs  main.rs  model.rs  registry.rs  rendering.rs  textual.rs
qrender/src/cards/: compose.rs  density.rs  format.rs  mod.rs  plan.rs  synthesis.rs
qrender/src/custom/: dimension.rs
qrender/templates/factoid/: card.html  header.html  page.html
qrender/tests/: adapter.rs  factoid.rs  golden.rs  ir_backends.rs
qrender/tests/fixtures/: Q3870.json  Q405.json  Q42.json
qrender/tests/snapshots/: adapter__q3870_text_via_qjson_transform.snap  factoid__q173399_factoid_body.snap  factoid__q173399_factoid_body.snap.new  factoid__q3870_factoid_body.snap  factoid__q3870_factoid_body.snap.new  factoid__q42_factoid_body.snap  factoid__q42_factoid_body.snap.new  golden__q3870_markdown.snap  golden__q3870_text.snap  golden__q405_text.snap  golden__q42_html.snap  golden__q42_markdown.snap  golden__q42_text.snap  golden__q42_wikitext.snap  ir_backends__q173399_markdown.snap  ir_backends__q3870_html.snap  ir_backends__q3870_markdown.snap  ir_backends__q3870_text.snap  ir_backends__q3870_wikitext.snap  ir_backends__q42_markdown.snap  ir_backends__q42_text.snap  ir_backends__q668_markdown.snap  ir_backends__q90_markdown.snap
src/: config.rs  data_loading.rs  lib.rs  main.rs  rendering.rs
src/custom/: dimension.rs  mod.rs
templates/: default.html.hbs  default.markdown.hbs  default.text.hbs  default.wikitext.hbs
