[package]
name = "qrender"
version = "0.1.0"
authors = ["Santhosh Thottingal <santhosh.thottingal@gmail.com>"]
edition = "2024"

[dependencies]
handlebars = "6.3.2"
reqwest = { version = "0.12.15", default-features = false, features = [
  "json",
  "rustls-tls",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
tokio = { version = "1.44.2", features = ["full"] }
clap = { version = "4.5.1", features = ["derive"] }
toml = "0.8.20"
